Fixed next level issue

--- a/Words/index.html
+++ b/Words/index.html
@@ -16,10 +16,23 @@
     <div class="webgl-content">
       <div id="gameContainer" style="width: 1280px; height: 720px"></div>
       <div class="footer">
-        <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Words</div>
       </div>
+      <div style="margin: 275px 0 50px 0">
+        <h3>Release Notes</h3>
+        <br/>
+        <h4>v0.2</h4>
+        <ul>
+          <li>Fixed issue with list of words not existing in grid</li>
+          <li>Added restart grid message</li>
+          <li>Removed splash screen</li>
+        </ul>
+        <br/>
+        <h4>v0.1</h4>
+        <ul>
+          <li>Initial Release</li>
+        </ul>
+    </div>
     </div>
   </body>
 </html>
