fixed layout issue on webpage

--- a/Words/index.html
+++ b/Words/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Words</title>
+    <title>Words</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
@@ -18,7 +18,8 @@
       <div class="footer">
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
       </div>
-      <div style="margin: 275px 0 50px 0">
+    </div>
+    <div style="margin: 1000px 0 50px 0">
         <h3>Release Notes</h3>
         <br/>
         <h4>v0.2</h4>
@@ -32,7 +33,6 @@
         <ul>
           <li>Initial Release</li>
         </ul>
-    </div>
     </div>
   </body>
 </html>
